feat: zing-chart

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,15 @@
       -webkit-text-stroke: 1px #4a90e2;
     }
     .font-outline-green {
-        -webkit-text-stroke: 1px #50e3c2;
-      }
+      -webkit-text-stroke: 1px #50e3c2;
+    }
+    .text-fill-color-transparent {
+      -webkit-text-fill-color: transparent;
+    }
+    .bg-zingchart {
+      background: radial-gradient(50% 124.93% at 95.86% -10%,#3efad9 0,hsla(0,0%,100%,0) 100%),linear-gradient(91.56deg,#ff9357 1.54%,#9100ff 98.71%);
+    }
+    .bg-clip-text {
+      -webkit-background-clip: text;
+    }
   }
