--- a/src/index.css
+++ b/src/index.css
@@ -21,4 +21,7 @@
     .bg-clip-text {
       -webkit-background-clip: text;
     }
+    .box-shadow-left {
+      box-shadow: 0 1px 0 rgba(0,0,0,0.3),0 1px 6px rgba(0,0,0,0.3),inset 0 1px 1px hsla(0,0%,100%,0.3);
+    }
   }
