--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,20 @@
     .box-shadow-left {
       box-shadow: 0 1px 0 rgba(0,0,0,0.3),0 1px 6px rgba(0,0,0,0.3),inset 0 1px 1px hsla(0,0%,100%,0.3);
     }
-  }
+    
+}
+
+.slick-next:before,
+.slick-prev:before {
+  font-size: 38px !important;
+}
+
+.slick-prev {
+  left: -2px !important;
+  z-index: 100;
+}
+
+.slick-next {
+  right: 16px !important;
+  z-index: 100;
+}
