--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,9 @@
     .box-shadow-left {
       box-shadow: 0 1px 0 rgba(0,0,0,0.3),0 1px 6px rgba(0,0,0,0.3),inset 0 1px 1px hsla(0,0%,100%,0.3);
     }
+    .header-shadow {
+      box-shadow: 0 3px 5px rgba(0,0,0,0.08);;
+    }
     
 }
 
@@ -41,3 +44,4 @@
   right: 16px !important;
   z-index: 100;
 }
+
